// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Selectors should render a Link with active styles 1`] = `[MockFunction]`;

exports[`<Link /> Selectors should render a Link with focus styles 1`] = `[MockFunction]`;

exports[`<Link /> Selectors should render a Link with hover styles 1`] = `[MockFunction]`;

exports[`<Link /> Size should render a large Link 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 OLTDV"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> Size should render a medium Link 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 kxVElj"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> Size should render a small Link 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 gTilFn"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various Link props should a render a Link with disabled prop 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 bCXeHz"
    color="shade.980"
    data-testid="ds-text"
    disabled=""
    href=""
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various Link props should reender a Link with target attr 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 OLTDV"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    target="_blank"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various Link props should render a Link with default props 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 kxVElj"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various Link props should render a Link with href attr 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 OLTDV"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various Link props should render a Link with rel attribute 1`] = `
<div>
  <a
    class="Textweb__Text-sc-1qdvl51-0 Linkweb__StyledText-l5skt-0 OLTDV"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    rel="noreferrer noopener"
    target="_blank"
  >
    Displaying some link
  </a>
</div>
`;
